making historique subscription hiddenable

--- a/src/app/features/auth/components/password-forgotten/password-forgotten.component.html
+++ b/src/app/features/auth/components/password-forgotten/password-forgotten.component.html
@@ -79,12 +79,12 @@
                   </div>
                 </div>
                 <div class="form-floating mb-4">
-                  <input type="password" id="confirmPassword" class="form-control" [class.is-invalid]="isSubmitted && (formGroup.controls['confirmPassword'].invalid || formGroup.value.password !== formGroup.value.confirmPassword)" formControlName="confirmPassword" placeholder="Confirmer le Nouveau Mot de Passe">
+                  <input type="password" id="confirmPassword" class="form-control" [class.is-invalid]="isSubmitted && (formGroup.controls['confirmPassword'].invalid || formGroup.value.password !== formGroup.controls['confirmPassword'].value)" formControlName="confirmPassword" placeholder="Confirmer le Nouveau Mot de Passe">
                   <label for="confirmPassword">Confirmer le Nouveau Mot de Passe</label>
                   <div *ngIf="isSubmitted && formGroup.controls['confirmPassword'].errors" class="invalid-feedback">
                     <div *ngIf="formGroup.controls['confirmPassword'].errors?.['required']">La confirmation du mot de passe est requise.</div>
                   </div>
-                  <div *ngIf="formGroup.value.password !== formGroup.value.confirmPassword && formGroup.controls['confirmPassword'].touched" class="invalid-feedback d-block">
+                  <div *ngIf="formGroup.controls['password'].value !== formGroup.controls['confirmPassword'].value && formGroup.controls['confirmPassword'].touched" class="invalid-feedback d-block">
                     Les mots de passe ne correspondent pas.
                   </div>
                 </div>
