--- a/src/app/shared/popup-group-for-notification/group-for-notification.component.html
+++ b/src/app/shared/popup-group-for-notification/group-for-notification.component.html
@@ -39,7 +39,7 @@
         <button type="button" class="btn btn-secondary" (click)="closeModal()">
           Annuler
         </button>
-        <button type="button" class="btn btn-primary" (click)="savaGroup()" [disabled]="!formGroup.get('groupMessage')?.value">
+        <button type="button" class="btn btn-primary"  [disabled]="!formGroup.get('groupMessage')?.value">
           <i class="bi bi-send"></i>
           Envoyer
         </button>
