--- a/src/app/features/member/components/member-list/member-list.component.html
+++ b/src/app/features/member/components/member-list/member-list.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <app-table-body [members]="members$ | async" [loading]="loading$ | async"></app-table-body>
+  <app-table-body [members]="members$ | async" [loading]="loading$ | async"/>
 
   <app-table-footer
     (exportTriggered)="toggleExportModal()"
