position je table-header, thead, table-footer

--- a/src/app/features/member/components/member-list/table-footer/table-footer.component.scss
+++ b/src/app/features/member/components/member-list/table-footer/table-footer.component.scss
@@ -1,5 +1,8 @@
 @import 'variables';
-
+:host{
+  position: sticky;
+  bottom: 0;
+}
 .footer-bar {
   display: flex;
   justify-content: space-between;
