--- a/src/app/features/member/components/member-list/member-list.component.scss
+++ b/src/app/features/member/components/member-list/member-list.component.scss
@@ -1,3 +1,6 @@
 @import 'variables';
 
-// Empty file. No styles needed as it is a container component.
+.container {
+  padding: 0;
+  background-color: red;
+}
