--- a/src/app/features/member/components/member-list/table-body/table-body.component.scss
+++ b/src/app/features/member/components/member-list/table-body/table-body.component.scss
@@ -1,8 +1,8 @@
 @import 'variables';
 
 .table-container {
-  overflow-x: auto;
-  height: 100%;
+
+  height: 100vh;
   background-color: $white;
 }
 
@@ -11,14 +11,16 @@
   border-collapse: collapse;
 
   thead {
-    position: sticky;
-    top: 0;
-    z-index: 10;
+
 
     tr {
       background-color: $gray-100;
       border-bottom: 1px solid $color-border-default;
-
+      position: sticky;
+      top: 8rem;
+      z-index: 1000;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-bottom: none;
       th {
         padding: $space-3 $space-4;
         text-align: left;
