--- a/src/app/features/member/components/member-list/member-list.component.scss
+++ b/src/app/features/member/components/member-list/member-list.component.scss
@@ -1,6 +1,17 @@
 @import 'variables';
 
+:host {
+  display: block;
+  height: 100%;
+}
+
 .container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   padding: 0;
-  background-color: red;
+}
+
+app-table-body {
+  flex-grow: 1;
 }
