--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,10 @@
 /* Styles Généraux de l'Application (utilisant le Design System) */
 /* ------------------------------------------------------------- */
 
+html, body {
+  height: 100%;
+}
+
 html {
   font-size: 62.5%; // 1rem = 10px
 }
@@ -45,6 +49,12 @@ body {
   color: $color-text-primary;
   margin: 0;
   padding: 0;
+}
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 // --- Styles de typographie de base ---
