--- a/src/app/features/member/components/member-list/table-footer/table-footer.component.scss
+++ b/src/app/features/member/components/member-list/table-footer/table-footer.component.scss
@@ -76,9 +76,12 @@
   }
 
   &:disabled {
+    background-color: $gray-200;
+    color: $gray-500;
+    border-color: $gray-300;
+    box-shadow: none;
     cursor: not-allowed;
-    opacity: 0.5;
-    background-color: $gray-100;
+    opacity: 1; // On n'utilise plus l'opacité pour le style désactivé
   }
 }
 
