add memberform, wizard form, validations ...

--- a/src/app/features/member/components/member-list/table-header/table-header.component.html
+++ b/src/app/features/member/components/member-list/table-header/table-header.component.html
@@ -3,7 +3,7 @@
     <div class="page-title">Les membres</div>
   </div>
   <div class="right-section">
-    <button class="action-button primary">
+    <button (click)="onAddMember()" class="action-button primary">
       <i class="bi bi-plus"></i> Ajouter un membre
     </button>
     <button class="action-button">
