--- a/src/app/shared/components/aside-bare/aside-bare.component.html
+++ b/src/app/shared/components/aside-bare/aside-bare.component.html
@@ -30,7 +30,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a routerLink="/members/add" routerLinkActive="active">
+          <a routerLink="/members/register-form" routerLinkActive="active">
             <i class="bi bi-person-plus"></i>
             <span class="nav-text">Ajouter un Membre</span>
             <span class="tooltip">Ajouter un Membre</span>
@@ -124,7 +124,7 @@
     </nav>
     <hr>
 
-     <nav class="navigation">
+    <nav class="navigation">
       <span>Gestions Des entités</span>
       <ul class="nav-items">
         <li class="nav-item">
