ux/ui disign v1

--- a/src/app/features/member/components/member-add/contact-info-form/contact-info-form.component.scss
+++ b/src/app/features/member/components/member-add/contact-info-form/contact-info-form.component.scss
@@ -1,8 +1,8 @@
-@import '../../../../../assets/scss/variables';
-@import '../../../../../assets/scss/typography';
+@import '../../../../../../assets/scss/variables';
+@import '../../../../../../assets/scss/typography';
 
 // Importation des styles de formulaire partagés
-@import "../personal-info-form/personal-info-form.component.scss";
+@import "../personal-info-form/personal-info-form.component";
 
 .contact-form-container {
   display: flex;
