--- a/src/app/features/member/components/member-add/personal-info-form/personal-info-form.component.scss
+++ b/src/app/features/member/components/member-add/personal-info-form/personal-info-form.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../../assets/scss/variables';
-@import '../../../../../assets/scss/typography';
+@import '../../../../../../assets/scss/variables';
+@import '../../../../../../assets/scss/typography';
 
 .form-grid {
   display: grid;
