--- a/src/app/features/member/components/member-add/religious-knowledge-form/religious-knowledge-form.component.scss
+++ b/src/app/features/member/components/member-add/religious-knowledge-form/religious-knowledge-form.component.scss
@@ -1,9 +1,9 @@
-@import '../../../../../assets/scss/variables';
-@import '../../../../../assets/scss/typography';
+@import '../../../../../../assets/scss/variables';
+@import '../../../../../../assets/scss/typography';
 
 // Importation des styles de formulaire partagés
-@import "../personal-info-form/personal-info-form.component.scss";
-@import "../contact-info-form/contact-info-form.component.scss"; // Pour les styles des cartes et boutons
+@import "../personal-info-form/personal-info-form.component";
+@import "../contact-info-form/contact-info-form.component"; // Pour les styles des cartes et boutons
 
 .knowledge-form-container {
   display: flex;
