--- a/src/app/features/member/components/member-add/academic-info-form/academic-info-form.component.html
+++ b/src/app/features/member/components/member-add/academic-info-form/academic-info-form.component.html
@@ -44,7 +44,7 @@
   <h3 class="section-title">Historique et Implication</h3>
   <div class="form-grid other-info-grid">
     <div class="form-field">
-      <label for="legacyInstitution" class="form-label">Ancien établissement (si transféré)</label>
+      <label for="legacyInstitution" class="form-label">Ancien établissement</label>
       <input id="legacyInstitution" type="text" formControlName="legacyInstitution" class="form-input">
     </div>
     <div class="form-field">
