--- a/src/app/features/member/components/member-add/contact-info-form/contact-info-form.component.html
+++ b/src/app/features/member/components/member-add/contact-info-form/contact-info-form.component.html
@@ -24,12 +24,8 @@
       <app-validation-message [control]="addressInDakar"></app-validation-message>
     </div>
     <div class="form-field">
-      <label for="holidayAddress" class="form-label">Adresse pendant les vacances</label>
-      <input id="holidayAddress" type="text" formControlName="holidayAddress" class="form-input">
-    </div>
-    <div class="form-field full-width">
-      <label for="addressToCampus" class="form-label">Itinéraire vers le campus</label>
-      <input id="addressToCampus" type="text" formControlName="addressToCampus" class="form-input">
+      <label for="addressOnCampus" class="form-label">Adresse au campus</label>
+      <input id="addressOnCampus" type="text" formControlName="addressOnCampus" class="form-input">
     </div>
   </div>
 
