--- a/src/app/features/member/components/member-add/personal-info-form/personal-info-form.component.html
+++ b/src/app/features/member/components/member-add/personal-info-form/personal-info-form.component.html
@@ -40,7 +40,7 @@
 
   <!-- Statut marital -->
   <div class="form-field">
-    <label for="maritalStatus" class="form-label">Statut marital</label>
+    <label for="maritalStatus" class="form-label">Statut social</label>
     <select id="maritalStatus" formControlName="maritalStatus" class="form-select">
       <option value="" disabled>Sélectionner...</option>
       <option value="SINGLE">Célibataire</option>
